# python_service

./: .gitignore  .pre-commit-config.yaml  cli.py  dockerfile  main.py  main2.py  pyproject.toml  requirements.txt  type_test.py
.github/workflows/: pylint.yml
test/: test_type.py
